flir_subscriber_original/log/build_2023-05-23_00-06-15/wifi_listener/stdout_stderr.log
running egg_info
writing ../../build/wifi_listener/wifi_listener.egg-info/PKG-INFO
writing dependency_links to ../../build/wifi_listener/wifi_listener.egg-info/dependency_links.txt
writing entry points to ../../build/wifi_listener/wifi_listener.egg-info/entry_points.txt
writing requirements to ../../build/wifi_listener/wifi_listener.egg-info/requires.txt
writing top-level names to ../../build/wifi_listener/wifi_listener.egg-info/top_level.txt
reading manifest file '../../build/wifi_listener/wifi_listener.egg-info/SOURCES.txt'
writing manifest file '../../build/wifi_listener/wifi_listener.egg-info/SOURCES.txt'
running build
running build_py
running install
running install_lib
byte-compiling /home/samuel/flir_subscriber/install/wifi_listener/lib/python3.8/site-packages/wifi_listener/wifi_listener.py to wifi_listener.cpython-38.pyc
running install_data
  File "/home/samuel/flir_subscriber/install/wifi_listener/lib/python3.8/site-packages/wifi_listener/wifi_listener.py", line 1
    from rclpy
             ^
SyntaxError: invalid syntax

running install_egg_info
removing '/home/samuel/flir_subscriber/install/wifi_listener/lib/python3.8/site-packages/wifi_listener-0.0.0-py3.8.egg-info' (and everything under it)
Copying ../../build/wifi_listener/wifi_listener.egg-info to /home/samuel/flir_subscriber/install/wifi_listener/lib/python3.8/site-packages/wifi_listener-0.0.0-py3.8.egg-info
running install_scripts
Installing wifi_listener script to /home/samuel/flir_subscriber/install/wifi_listener/lib/wifi_listener
writing list of installed files to '/home/samuel/flir_subscriber/build/wifi_listener/install.log'
